tests/sksl/errors/MatrixToVectorCastBoolean.glsl
### Compilation failed:

error: 4: invalid argument to 'bool' constructor (expected a number or bool, but found 'half2x2')
error: 5: 'half2x2' is not a valid parameter to 'bool2' constructor
error: 6: 'half2x2' is not a valid parameter to 'bool3' constructor
3 errors
